<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.ComicGround"
    android:orientation="vertical">

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        style="@style/line"/>
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
        android:text="@string/rateAndComment"
        style="@style/textosVarios"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:gravity="center"/>
        <RatingBar
            android:id="@+id/valoracionUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/ratingBar"
            android:scaleX="0.75"
            android:scaleY="0.75"
            android:rating="1"
            android:max="10"
            android:numStars="5"
            android:stepSize="0.25"/>
    <EditText
        android:id="@+id/etComentar"
        android:gravity="start|top"
        android:hint="@string/comment"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:inputType="textMultiLine"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAtras"
            android:layout_weight="1"
            style="@style/buttonBorderless"
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEnviar"
            android:layout_weight="1"
            style="@style/buttonColored"
            android:text="@string/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>